--- a/가상머신 소개와 설치.md
+++ b/가상머신 소개와 설치.md
@@ -1,4 +1,4 @@
-## 가상머신 소개와 설치(Vmware, ubuntu)
+# 가상머신 소개와 설치(Vmware, ubuntu)
 
 
 <br>
@@ -6,11 +6,11 @@
 #### 가상머신
 
 - 지금 사용하는 Windows를 사용하면서도 여러 대의 리눅스 서버를 운영하는효과를 내는 프로그램
-- PC에 이미 설치되어있는 Windows를 호스트 운영체제(hostOS)라 부르고
-가상머신에 설치할 그 외의 운영체제를 게스트 운영체제(guestOS)라 부름
+- PC에 이미 설치되어있는 Windows를 호스트 운영체제(hostOS)라 부르고, 가상머신에 설치할 그 외의 운영체제를 게스트 운영체제(guestOS)라 부름
 - 멀티부팅(Multi-Booting)과는 개념이 다름
 
 <br>
+
 #### 가상머신의 소프트웨어 개념
 
 - 가상머신 소프트웨어를 사용해도 호스트 컴퓨터는 변경이 없고, 가상 라우터와 가상의 컴퓨터를 만들어 사용할 수 있음
@@ -18,6 +18,7 @@
 pro는 유료지만 스냅숏 기능과 가상 네트워크 사용자 설정 기능이 있음
 
 <br>
+
 #### Vmware Workstation pro 설치
 
 
