Update 가상머신 소개와 설치.md

--- a/가상머신 소개와 설치.md
+++ b/가상머신 소개와 설치.md
@@ -21,6 +21,7 @@ pro는 유료지만 스냅숏 기능과 가상 네트워크 사용자 설정 기
 
 #### Vmware Workstation pro 설치
 
+<br>
 
 ![2](https://user-images.githubusercontent.com/84123877/159231740-93071b9d-eb77-45d0-aaa0-23208b504a3a.PNG)
 
@@ -28,7 +29,7 @@ pro는 유료지만 스냅숏 기능과 가상 네트워크 사용자 설정 기
 
 → 4개의 게스트os 폴더 생성  
 
-<br>
+<br><br>
 
 ![3](https://user-images.githubusercontent.com/84123877/159232386-a936b151-d940-45e4-844c-a01b5c4dbcfb.PNG)
 
@@ -37,7 +38,7 @@ pro는 유료지만 스냅숏 기능과 가상 네트워크 사용자 설정 기
 → 가상머신이 생성된 화면
   ＊Edit virtual machine settings로 게스트os 구성확인 및 변경가능
   
-<br>
+<br><br>
   
 ![4](https://user-images.githubusercontent.com/84123877/159232563-866e0b7b-6246-472c-92b3-da0572e2bc4a.PNG)
 
@@ -45,7 +46,7 @@ pro는 유료지만 스냅숏 기능과 가상 네트워크 사용자 설정 기
 
 → 생성된 게스트os의 구성 변경
 
-<br>
+<br><br>
 
 ![5](https://user-images.githubusercontent.com/84123877/159232568-bdd30d07-5645-4423-8d98-1c95882f2070.PNG)
 
@@ -53,7 +54,15 @@ pro는 유료지만 스냅숏 기능과 가상 네트워크 사용자 설정 기
 
 → 위와 같은 방법으로 4개의 게스트os 생성
 
-<br>
+<br><br>
+
+#### Vmware
+
+- 1대의 컴퓨터만으로 실무 환경과 거의 비슷한 네트워크 컴퓨터 환경의 구성이 가능
+- 운영체제의 특정 시점을 저장하는 스냅숏 기능 사용 가능
+- 하드웨어를 마음대로 여러 개 장착하여 테스트 가능
+- 현재 컴퓨터 상태를 저장하고 다음 사용때 현재 상태를 이어서 구동 가능 
+  (Suspend 기능) // 일시정지
 
 
 ```
