--- a/Linux_Shell script/1_3 파일 권한 설정.md
+++ b/Linux_Shell script/1_3 파일 권한 설정.md
@@ -2,9 +2,9 @@
 
 ---
 
-![Untitled](1%203~5%20%E1%84%91%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%AF%20%E1%84%80%E1%85%AF%E1%86%AB%E1%84%92%E1%85%A1%E1%86%AB%20%E1%84%89%E1%85%A5%E1%86%AF%E1%84%8C%E1%85%A5%E1%86%BC%204d2a43ee255b4b66b221078ee3bd3fb0/Untitled.png)
+![Untitled](https://user-images.githubusercontent.com/84123877/182988013-60972eaf-868d-43bb-8a02-53e4a4bfbab5.png)
 
-![Untitled](1%203~5%20%E1%84%91%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%AF%20%E1%84%80%E1%85%AF%E1%86%AB%E1%84%92%E1%85%A1%E1%86%AB%20%E1%84%89%E1%85%A5%E1%86%AF%E1%84%8C%E1%85%A5%E1%86%BC%204d2a43ee255b4b66b221078ee3bd3fb0/Untitled%201.png)
+![Untitled 1](https://user-images.githubusercontent.com/84123877/182988005-555947c3-a256-4b14-b81c-7acd6bd5793a.png)
 
 ```bash
 #! /bin/bash
@@ -43,11 +43,11 @@ echo [ /etc/passwd 권한 탐색이 완료되었습니다. ]
 
 ### 권한 표준 일치
 
-![Untitled](1%203~5%20%E1%84%91%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%AF%20%E1%84%80%E1%85%AF%E1%86%AB%E1%84%92%E1%85%A1%E1%86%AB%20%E1%84%89%E1%85%A5%E1%86%AF%E1%84%8C%E1%85%A5%E1%86%BC%204d2a43ee255b4b66b221078ee3bd3fb0/Untitled%202.png)
+![Untitled 2](https://user-images.githubusercontent.com/84123877/182988009-dd64dcf6-2f96-4946-bc53-72cf7fcaffb3.png)
 
 ### 권한 표준 불일치
 
-![Untitled](1%203~5%20%E1%84%91%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%AF%20%E1%84%80%E1%85%AF%E1%86%AB%E1%84%92%E1%85%A1%E1%86%AB%20%E1%84%89%E1%85%A5%E1%86%AF%E1%84%8C%E1%85%A5%E1%86%BC%204d2a43ee255b4b66b221078ee3bd3fb0/Untitled%203.png)
+![Untitled 3](https://user-images.githubusercontent.com/84123877/182988011-ee4768d3-ad9c-4651-95a4-414ffdc40459.png)
 
 /etc/passwd 파일의 권한이 표준(644, 444)과 일치, 불일치를 탐색하는 기능이다.
 
