--- a/Linux_Shell script/1_3 파일 권한 설정 (권한 표준 설정 확인).md
+++ b/Linux_Shell script/1_3 파일 권한 설정 (권한 표준 설정 확인).md
@@ -1,8 +1,9 @@
-# 1.3~5 파일 권한 설정
+# 1.3 파일 권한 설정
 
 ---
 
 ![Untitled](https://user-images.githubusercontent.com/84123877/182988013-60972eaf-868d-43bb-8a02-53e4a4bfbab5.png)
+![image](https://user-images.githubusercontent.com/84123877/182988237-6182c333-5156-492e-9606-63de0f87861f.png)
 
 ![Untitled 1](https://user-images.githubusercontent.com/84123877/182988005-555947c3-a256-4b14-b81c-7acd6bd5793a.png)
 
