Update and rename 디렉터리 계층 구조 및 경로 (+ 파일과 디렉터리).md to RHCSA/디렉터리 계층 구조 및 경로 (+ 파일과 디렉터리).md

--- a/RHCSA/디렉터리 계층 구조 및 경로 (+ 파일과 디렉터리).md
+++ b/RHCSA/디렉터리 계층 구조 및 경로 (+ 파일과 디렉터리).md
@@ -4,7 +4,7 @@
 
 ## 1. 디렉터리 계층 구조
 
-![Untitled](%E1%84%83%E1%85%B5%E1%84%85%E1%85%A6%E1%86%A8%E1%84%90%E1%85%A5%E1%84%85%E1%85%B5%20%E1%84%80%E1%85%A8%E1%84%8E%E1%85%B3%E1%86%BC%20%E1%84%80%E1%85%AE%E1%84%8C%E1%85%A9%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%80%E1%85%A7%E1%86%BC%E1%84%85%E1%85%A9%20(+%20%E1%84%91%E1%85%A1%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%80%E1%85%AA%20%E1%84%83%E1%85%B5%E1%84%85%E1%85%A6%E1%86%A8%E1%84%90%E1%85%A5%E1%84%85%20bdbbafdda7004c07acf70ad4355f79e5/Untitled.png)
+![Untitled](https://user-images.githubusercontent.com/84123877/201346853-b71bf93a-ab90-40e6-8655-72ade00ab3bd.png)
 
 리눅스는 위 사진과 같이 파일을 효율적으로 관리하기 위해 디렉터리가 계층적 즉, 트리구조로 나뉘어 있다.
 
