Update 사용자 및 그룹.md

--- a/RHCSA/사용자 및 그룹.md
+++ b/RHCSA/사용자 및 그룹.md
@@ -80,7 +80,7 @@ testall:x:1001:
 
 ### 파일타입
 
-![Untitled](%E1%84%89%E1%85%A1%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%8C%E1%85%A1%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%80%E1%85%B3%E1%84%85%E1%85%AE%E1%86%B8%20cc5506032b7d4d48a8c3009554aa4767/Untitled.png)
+![Untitled](https://user-images.githubusercontent.com/84123877/201521682-314f5026-84e5-4794-866d-6b5be5d4896e.png)
 
 - 사용자 구분
 
@@ -153,19 +153,19 @@ s | 소켓 파일
 
 `chmod [who(u,g,o,a)] [+,-,=] [permission(r,w,x)] [filename]`
 
-![Untitled](%E1%84%89%E1%85%A1%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%8C%E1%85%A1%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%80%E1%85%B3%E1%84%85%E1%85%AE%E1%86%B8%20cc5506032b7d4d48a8c3009554aa4767/Untitled%201.png)
+![Untitled 1](https://user-images.githubusercontent.com/84123877/201521673-ea57706e-dbc0-4757-8134-288873faca8e.png)
 
 1. chown - 파일 및 디렉터리 소유권 변경 명령어
 
 `chown [option] [user:group] [filename]`
 
-![Untitled](%E1%84%89%E1%85%A1%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%8C%E1%85%A1%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%80%E1%85%B3%E1%84%85%E1%85%AE%E1%86%B8%20cc5506032b7d4d48a8c3009554aa4767/Untitled%202.png)
+![Untitled 2](https://user-images.githubusercontent.com/84123877/201521677-19a9e596-77d6-435c-938b-c8ad6b0e7a0d.png)
 
 1. chgrp - 파일의 사용자 그룹 변경 명령어
 
 `chgrp [option] [group] [filename]`
 
-![Untitled](%E1%84%89%E1%85%A1%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%8C%E1%85%A1%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%80%E1%85%B3%E1%84%85%E1%85%AE%E1%86%B8%20cc5506032b7d4d48a8c3009554aa4767/Untitled%203.png)
+![Untitled 3](https://user-images.githubusercontent.com/84123877/201521678-8dcf9d1f-8504-464f-bdef-18ec983f7ed1.png)
 
 ---
 
@@ -177,15 +177,15 @@ s | 소켓 파일
 
 (기본 umask는 022로 설정되어 있다. 즉, 파일을 새로 생성할 때 666 022를 뺀 값 644로 생성되며 디렉터리는 777에서 022를 뺀 755값으로 기본 권한이 설정된다.)
 
-![Untitled](%E1%84%89%E1%85%A1%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%8C%E1%85%A1%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%80%E1%85%B3%E1%84%85%E1%85%AE%E1%86%B8%20cc5506032b7d4d48a8c3009554aa4767/Untitled%204.png)
+![Untitled 4](https://user-images.githubusercontent.com/84123877/201521679-1a23975e-08d4-4948-ac12-11976817cc14.png)
 
 umask 확인 및 변경
 
-![Untitled](%E1%84%89%E1%85%A1%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%8C%E1%85%A1%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%80%E1%85%B3%E1%84%85%E1%85%AE%E1%86%B8%20cc5506032b7d4d48a8c3009554aa4767/Untitled%205.png)
+![Untitled 5](https://user-images.githubusercontent.com/84123877/201521680-954dce72-0b9c-4acf-924b-f94a03d05a46.png)
 
 변경 후 디렉터리는 755(기본)이 되어야 하는데 744로 바뀐 모습
 
-![Untitled](%E1%84%89%E1%85%A1%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%8C%E1%85%A1%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%80%E1%85%B3%E1%84%85%E1%85%AE%E1%86%B8%20cc5506032b7d4d48a8c3009554aa4767/Untitled%206.png)
+![Untitled 6](https://user-images.githubusercontent.com/84123877/201521681-212c9124-933c-4b93-9fd1-1ea46398ead9.png)
 
 변경 후 파일은 644가 되어야 하는데 633으로 바뀐 모습
 
