Update 사용자 및 그룹.md

--- a/RHCSA/사용자 및 그룹.md
+++ b/RHCSA/사용자 및 그룹.md
@@ -86,67 +86,44 @@ testall:x:1001:
 
 퍼미션필드의 사용자 구분 User(소유자), Group(그룹), Other(기타)
 
-표 작성^^
 
-항목 | 설명
-
-User(소유자) | 파일과 디렉터리의 소유자이며 파일이나 디렉터리를 생성한 사용자가 일반적으로 소유자가 된다. 명령어로 변경 가능
-
-Group(그룹) | 사용자가 속한 논리 그룹이며 파일이나 디렉터리를 생성한 사용자의 기본그룹으로 지정, 명령어로 변경 가능
-
-Other(기타) | 소유자나 그룹에 속하지 않은 기타 사용자
+| 항목 | 설명 |
+| --- | --- |
+| User(소유자) | 파일과 디렉터리의 소유자이며 파일이나 디렉터리를 생성한 사용자가 일반적으로 소유자가 된다. 명령어로 변경 가능 |
+| Group(그룹) | 사용자가 속한 논리 그룹이며 파일이나 디렉터리를 생성한 사용자의 기본그룹으로 지정, 명령어로 변경 가능 |
+| her(기타) | 소유자나 그룹에 속하지 않은 기타 사용자 |
 
 - 파일 타입 종류
 
-표 작성^^2
-
-d | 디렉터리
-
-b | 블록타입 특수 파일
-
-c | 문자타입 특수 파일
-
-l | 심볼릭 링크 파일
-
-p | 파이프 파일
-
-s | 소켓 파일
-
-- | 일반 파일
+| d | 디렉터리 |
+| --- | --- |
+| b | 블록타입 특수 파일 |
+| c | 문자타입 특수 파일 |
+| l | 심볼릭 링크 파일 |
+| p | 파이프 파일 |
+| s | 소켓 파일 |
+| - | 일반 파일 |
 
 - 파일 및 디렉터리 Permission(권한) 종류와 값(8진수)
 
-표 작성^^3
-
-퍼미션 | 문자 | 파일 | 디렉터리 | 값(8진수)
-
-읽기 | r | 파일 내용 확인 및 복사 가능 | ls 명령어로 디렉터리 내용 확인 가능 | 4
-
-쓰기 | w | 파일의 내용 수정 가능 | 실행 권한이 있을 경우 디렉터리 내에 파일 추가 및 삭제 가능 | 2
-
-실행 | x | 실행파일의 경우 실행가능(실행 퍼미션을 가지고 있을 때) | cd 명령어를 사용하여 디렉터리 접근 가능 | 1
+| 퍼미션 | 문자 | 파일 | 디렉터리 | 값(8진수) |
+| --- | --- | --- | --- | --- |
+| 읽기 | r | 파일 내용 확인 및 복사 가능 | ls 명령어로 디렉터리 내용 확인 가능 | 4 | 
+| 쓰기 | w | 파일의 내용 수정 가능 | 실행 권한이 있을 경우 디렉터리 내에 파일 추가 및 삭제 가능 | 2 |
+| 실행 | x | 실행파일의 경우 실행가능(실행 퍼미션을 가지고 있을 때) | cd 명령어를 사용하여 디렉터리 접근 가능 | 1 |
 
 - 8진수를 이용한 퍼미션의 집합
 
-포 작성 ^^4
-
-8진수 | 퍼미션 집합
-
-7 | rwx
-
-6 | rw-
-
-5 |  r-x
-
-4 | r--
-
-3 | -wx
-
-2 | -w-
-
-1 | --x
-
-0 | ---
+| 8진수 | 퍼미션 집합 |
+| --- | --- |
+| 7 | rwx |
+| 6 | rw- |
+| 5 |  r-x |
+| 4 | r-- |
+| 3 | -wx |
+| 2 | -w- | 
+| 1 | --x |
+| 0 | --- |
 
 - 퍼미션 관련 명령어
 1. chmod - 파일 및 디렉터리 권한 변경 명령어
