--- a/RHCSA_CMD/계정 생성.md
+++ b/RHCSA_CMD/계정 생성.md
@@ -57,6 +57,22 @@ harry:x:1002:
 sarah:x:1003:
 ```
 
+```bash
+추가로, 유저 패스워드 설정에 관해서
+생성한 user로 접속하여 passwd 입력을 통해 패스워드 설정을 진행하는 경우,
+인증 토큰 오류가 발생하는 경우가 있었다.
+
+이는 계정 변경 유효기간 정책에 부합하지 않아 나타나는 이슈이다.
+(******chage -l [user name] 명령어로 확인가능******)
+
+해당 문제는 이와 같은 방안으로 해결할 수 있다. 
+1. 계정 변경 유효기간 정책 수정
+   chage -m 99999 [user name]
+2. 최고 관리자 권한인 root 계정으로 패스워드 변경
+   a. echo 'passwd' | passwd --stdin [user name]
+   b. passwd [user name]
+```
+
 [1차 (11.23) 실패](https://www.notion.so/1-11-23-a700a58cf92b46b085edb3b813ef3a70)
 
 ---
