--- a/RHCSA_CMD/논리 볼륨 생성.md
+++ b/RHCSA_CMD/논리 볼륨 생성.md
@@ -156,7 +156,7 @@ PV는 여러대의 PE로 구성되어 있음.
 
 즉, 8m 단위로 나뉘니 1020m 에서 1016m 이된것. (8m 짜리 PE 가 **127개 있는것!** )
 
-![Untitled](%E1%84%82%E1%85%A9%E1%86%AB%E1%84%85%E1%85%B5%20%E1%84%87%E1%85%A9%E1%86%AF%E1%84%85%E1%85%B2%E1%86%B7%20%E1%84%89%E1%85%A2%E1%86%BC%E1%84%89%E1%85%A5%E1%86%BC%205189a78e557641f4ac51b13e955d2852/Untitled.png)
+![Untitled](https://user-images.githubusercontent.com/84123877/207807654-a422d5d1-c230-4e2e-a024-802bf2deb3b5.png)
 
 ### 추가1. vfat 파일시스템
 
@@ -165,7 +165,5 @@ vfat 파일시스템으로 포맷하러면, 해당 패키지를 설치해야 한
 `yum install -y dosfstools`
 
 파일시스템별 추가 패키지 조사
-
-[1차 (11.24) 실패](https://www.notion.so/1-11-24-2616a8ce593a453789b304464a355509)
 
 ---
